# pdfsignerpy

./: .gitignore  .zenodo.json  404.html  CITATION.cff  CLAUDE.md  Cargo.toml  README.md  RELEASING.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
api/: index.html
docs/: api.md  index.md
python/pdfsigner/: __init__.py  _pdfsigner.pyi
search/: search_index.json
src/: lib.rs
tests/: test_pdfsigner.py
