[package]
name = "pdfsigner-py"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Python bindings (PyO3) for the pure-Rust pdf_signer PAdES backend."
license = "GPL-3.0-or-later"
publish = false

[lib]
# The compiled extension module imported as `pdfsigner._pdfsigner`.
name = "_pdfsigner"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["abi3-py39"] }
# The signing/verification engine: the standalone pure-Rust crate, pinned.
pdf_signer = { git = "https://github.com/StrategicProjects/pdf_signer", tag = "v0.2.0", features = ["https"] }

[profile.release]
lto = true
codegen-units = 1
